day four solution

--- a/haskell-aoc2022.cabal
+++ b/haskell-aoc2022.cabal
@@ -25,7 +25,8 @@ library
     exposed-modules:  
         DayOne,
         DayTwo,
-        DayThree
+        DayThree,
+        DayFour
     build-depends:    
         base ^>=4.16.2.0,
         text ^>=1.2.5.0
